codex-rs/tui/src/snapshots/codex_tui__multi_agents__tests__collab_agent_transcript.snap
---
source: tui/src/multi_agents.rs
expression: snapshot
---
• Spawned Robie [explorer] (gpt-5 high)
  └ Compute 11! and reply with just the integer result.
    Delegation: not provided
    Requested context inheritance: bounded
    Context inheritance: bounded -> bounded_trimmed
    Budget turns 6 -> 2 | tokens ~18500/24000

• Sent input to Robie [explorer]
  └ Please continue and return the answer only.

• Listening for completion from Robie [explorer]

• Observed completion
  └ Robie [explorer]: Completed - 39916800
    Bob [worker]: Error - tool timeout

• Closed Robie [explorer]
