codex-rs/tui/src/snapshots/codex_tui__multi_agents__tests__collab_spawn_begin.snap
---
source: tui/src/multi_agents.rs
expression: cell_to_text(&cell)
---
• Spawning agent (gpt-5 high)
  └ Inspect the repo and report the likely failure mode.
    Requested context inheritance: bounded
