codex-rs/tui/src/snapshots/codex_tui__multi_agents__tests__collab_spawn_end_replay.snap
---
source: tui/src/multi_agents.rs
expression: cell_to_text(&cell)
---
• Spawned Robie [explorer] (gpt-5-mini medium)
  └ Inspect the repo and report the likely failure mode.
    Requested model/reasoning: (gpt-5 high)
    Requested context inheritance: bounded
    Context bounded -> bounded_trimmed
